Update about.html to refine text for clarity and consistency, changing "AI answer engine" to "AI assistant" and adjusting the status message from "Systems Active" to "System Active." Additionally, add a new index-original.js file to implement performance optimizations for smooth scrolling and enhance user experience with various interactive features.

--- a/about.html
+++ b/about.html
@@ -101,10 +101,10 @@
   <div id="identifier">
     
     
-    <h3 style="margin-right: auto;">Ask Jarvis, my AI answer engine, about these topics.</h3>
+    <h3 style="margin-right: auto;">Ask Jarvis, my AI assistant, about these topics.</h3>
 
     <div id="statusID">
-      <p id="status">Systems Active</p></div>
+      <p id="status">System Active</p></div>
 
   
   </div>
