--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   
   <!-- Force deploy -->
   <link rel="icon" type="image/png" href="Notionme.png">
-  <link rel="stylesheet" href="styles.css?v=2">
+  <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
@@ -181,7 +181,7 @@
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.min.js?v=2"></script>
+  <script src="index.min.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
