--- a/thoughts.html
+++ b/thoughts.html
@@ -77,6 +77,7 @@
           </div>
           <h3 class="thought-title">The Interpolation of Design</h3>
           <div class="thought-body-truncated">
+            <p></p>
             <p class="lead-paragraph">This thought was inspired by a conversation I had around <i>interpolation in music</i> during one of my 1:1s with Forbes' VP of Product Design.</p> <br> 
             <p> The conversation led me 
                 to thinking about the interpolation of design; how existing 
@@ -91,9 +92,8 @@
 
                  <br>
                 
-                 <p>At its core, design intuition 
-                 is transferable; it’s about understanding human intent & pattern recognition and translating something within an established structure,
-                  and applying within a new context that just makes sense.</p>
+                 <p>At its core, design intuition is the art of pattern recognition; seeing the logic behind what works, 
+                    then reshaping it within a new context that just makes sense.</p>
           </div>
           <button class="see-more-btn" onclick="openThoughtModal(this)">See more</button>
         </div>
