Update thoughts.html to correct the link for MGMT’s "Kids" in the context of music interpolation. This change enhances the accuracy of references and improves the overall clarity of the content.

--- a/thoughts.html
+++ b/thoughts.html
@@ -84,7 +84,7 @@
                 solutions can be reimagined for new use cases, much like how
                  music interpolations carry melodies across genres and eras. 
                  Take <a href="https://youtu.be/8fuqAki8gLA?si=D1IgF3NToXdpx_U0" target="_blank" style="color: #5b4b34; text-decoration: underline;">Opposite of Adults</a> by Chiddy Bang, for instance — it borrows 
-                 the youthful nostalgia of MGMT’s <a href="https://youtu.be/fe4EK4HSPkI?si=u-hPTjTHUfhRyr8u" target="_blank" style="color: #5b4b34; text-decoration: underline;">Kids</a> and turns it into something 
+                 the youthful nostalgia of MGMT’s <a href="https://youtu.be/fe4EK4HSPkI?si=f9k2NIQ9hqY4M7NO&t=65" target="_blank" style="color: #5b4b34; text-decoration: underline;">Kids</a> and turns it into something 
                  fresh and contextually new. Design works the same way: a navigation 
                  pattern from one industry can resurface in another with renewed meaning. 
                  The same intuition that helps a designer build clarity into a finance app can 
