Refine thoughts.html to improve content clarity and structure. Added spacing for better readability and enhanced the description of design intuition by emphasizing the logic behind design patterns.

--- a/thoughts.html
+++ b/thoughts.html
@@ -85,15 +85,17 @@
                  music interpolations carry melodies across genres and eras. 
                  Take <a href="https://youtu.be/8fuqAki8gLA?si=D1IgF3NToXdpx_U0" target="_blank" style="color: #5b4b34; text-decoration: underline;">Opposite of Adults</a> by Chiddy Bang, for instance — it borrows 
                  the youthful nostalgia of MGMT’s <a href="https://youtu.be/fe4EK4HSPkI?si=f9k2NIQ9hqY4M7NO&t=65" target="_blank" style="color: #5b4b34; text-decoration: underline;">Kids</a> and turns it into something 
-                 fresh and contextually new. Design works the same way: a navigation 
-                 pattern from one industry can resurface in another with renewed meaning. 
+                 fresh and contextually new.</p> <br>
+
+                 <p> Design works the same way: a navigation 
+                 pattern from one industry can resurface in another with renewed meaning & utility. 
                  The same intuition that helps a designer build clarity into a finance app can 
                  also guide the creation of a storytelling platform.</p>
 
                  <br>
                 
                  <p>At its core, design intuition is the art of pattern recognition; seeing the logic behind what works, 
-                    then reshaping it within a new context that just makes sense.</p>
+                    then reshaping that logic within a new context that just makes sense.</p>
           </div>
           <button class="see-more-btn" onclick="openThoughtModal(this)">See more</button>
         </div>
