Refine thoughts.html to improve the lead paragraph by separating it from the subsequent content. This change enhances clarity and readability of the thought description on design interpolation.

--- a/thoughts.html
+++ b/thoughts.html
@@ -80,7 +80,7 @@
           <br>
           <div class="thought-body-truncated">
             <p></p>
-            <p class="lead-paragraph">This thought came from a conversation I had during a 1:1 with Forbes' VP of Product Design. At one point, he used the word “<i>interpolation</i>” to describe design patterns that carry across industries. My first reaction was, 
+            <p class="lead-paragraph">This thought came from a conversation I had during a 1:1 with Forbes' VP of Product Design.</p>  <p>At one point, he used the word “<i>interpolation</i>” to describe design patterns that carry across industries. My first reaction was, 
                 “Wait...interpolation like music?!” </p> <br> 
                 <p> The parallel clicked instantly; I understood exactly what he meant.
              </p> <br> 
