Refine thoughts.html to enhance the description of design interpolation. Improved clarity by restructuring sentences and adjusting the layout of the GIF, ensuring a more engaging presentation of the content.

--- a/thoughts.html
+++ b/thoughts.html
@@ -80,15 +80,15 @@
           <br>
           <div class="thought-body-truncated">
             <p></p>
-            <p class="lead-paragraph">This thought came from a conversation I had during a 1:1 with Forbes' VP of Product Design.</p>  <p>At one point, he used the word “<i>interpolation</i>” to describe design patterns that carry across industries. My first reaction was, 
+            <p class="lead-paragraph">This thought came from a conversation I had during a 1:1 with Forbes' VP of Product Design.</p>  <p>At one point, he used the word “<i>interpolation</i>” to describe design patterns that carry across industries.</p> <br><p class="lead-paragraph">My first reaction was, 
                 “Wait...interpolation like music?!” </p> <br> 
                 <p> The parallel clicked instantly; I understood exactly what he meant.
              </p> <br> 
 <h4>What is Interpolation?</h4>
              <p>Interpolation, in its simplest form, is using a pre-existing concept as a reference to create something new. In music, if you’ve ever heard a song that feels oddly familiar,
-                like it echoes another track and makes you react like the gif below, then you’ve experienced an interpolation. </p> <br>
-             <div style="width:80%;height:0;padding-bottom:46%;position:relative;"><iframe src="https://giphy.com/embed/L3ERvA6jWCd0qO4NdX" width="80%" height="80%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/OnceInHollywood-once-upon-a-time-in-hollywood-onceuponatimeinhollywood-L3ERvA6jWCd0qO4NdX">via GIPHY</a></p>
-            <p> The conversation led me to thinking about the interpolation of design; how existing solutions can be reimagined for new use cases, much like how music interpolations carry melodies across genres and eras. </p>
+                like it echoes another track and makes you react like the gif below, then congrats, you’ve experienced an interpolation.</p> <br>
+             <div style="width:100%;height:0;padding-bottom:40%;position:relative;"><iframe src="https://giphy.com/embed/L3ERvA6jWCd0qO4NdX" width="100%" height="80%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/OnceInHollywood-once-upon-a-time-in-hollywood-onceuponatimeinhollywood-L3ERvA6jWCd0qO4NdX"></a></p>
+            <p> The conversation led me to thinking about the interpolation of design; how existing solutions have, and will continue to be reimagined for new use cases, much like how music interpolations carry melodies across genres and eras. </p>
 
 <br>
                  <p class="lead-paragraph">
@@ -129,7 +129,7 @@
                  <br>
 
                  <p> Design works the same way: a navigation 
-                 pattern from one industry can resurface in another with renewed meaning & utility. 
+                 pattern from one industry, can be reimagined for another with renewed meaning & utility. 
                  The same intuition that helps a designer build clarity into a finance app can 
                  also guide the creation of a storytelling platform.</p>
 
