Refactor index.js to enhance mobile menu functionality with exit animations. Update styles.css to implement scale animations for project cards on the work page. Modify HTML files to reference the unminified index.js for improved debugging and development. Update thoughts.html to replace an iframe with an image for better performance and layout consistency.

--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@
   <!-- Preload critical image -->
 
 </head>
-<body>
+<body class="work-page">
   <!-- WebGL Canvas for particles -->
   <canvas id="particleCanvas"></canvas>
 
@@ -189,7 +189,7 @@
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.min.js"></script>
+  <script src="index.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
