--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.min.js"></script>
+  <script src="index.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
