Correct punctuation in thoughts.html to enhance readability of the design intuition description. This minor adjustment improves the flow of the text without altering the overall content.

--- a/thoughts.html
+++ b/thoughts.html
@@ -130,7 +130,7 @@
 
                  <p> Design works the same way: a navigation 
                  pattern from one industry, can be reimagined for another with renewed meaning & utility. 
-                 The same intuition that helps a designer build clarity into a finance app can 
+                 The same intuition that helps a designer build clarity into a finance app, can 
                  also guide the creation of a storytelling platform.</p>
 
                  <br>
