--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -665,7 +665,7 @@ that when it comes to workflow based UX, you want to be conscious of balancing v
       </button>
   
     </div>
-    <p style="color: #737373; font-size: 12px;">© 2025 | Adé Obayomi</p>
+    <p style="color: #737373; font-size: 12px;">© <span class="current-year"></span> | Adé Obayomi</p>
 
   </div>
   <div id="lightbox" class="lightbox" tabindex="-1" aria-modal="true" role="dialog" style="display:none;">
