--- a/work.html
+++ b/work.html
@@ -112,6 +112,22 @@
       <h3>Forbes: Explore</h3>
       <p>Rethinking news & information consumption habits amidst the proliferation of AI.</p>
     </div>
+
+    <div class="project-content">
+      <a href="#" class="image-link">
+        <div class="image-item">
+          <img src="AI notifs cover image.png" alt="AI Notifications feature interface." loading="lazy">
+        </div>
+      </a>
+      <div id="tagdiv">
+        <span class="context-tag">AI</span>
+        <span class="context-tag">Notifications</span>
+        <span class="context-tag">User Engagement</span>
+      </div>
+      <h3>AI Notifications</h3>
+      <p>Boosting user acquistion through a notification system that delivers personalized and timely updates to registered users.</p>
+    </div>
+
     <div class="project-content">
       <a href="bertie-sidekick.html" class="image-link">
         <div class="image-item">
