Update work.html to enhance user engagement messaging by replacing "User Engagement" with "User Acquisition & Growth" and refining the project description to focus on converting unregistered users into registered users.

--- a/work.html
+++ b/work.html
@@ -122,10 +122,10 @@
       <div id="tagdiv">
         <span class="context-tag">AI</span>
         <span class="context-tag">Notifications</span>
-        <span class="context-tag">User Engagement</span>
+        <span class="context-tag">User Acquisition & Growth</span>
       </div>
       <h3>AI Notifications</h3>
-      <p>Boosting user acquistion through a notification system that delivers personalized and timely updates to registered users.</p>
+      <p>Leveraging notifications to convert anonymous users into registered users.</p>
     </div>
 
     <div class="project-content">
