--- a/work.html
+++ b/work.html
@@ -114,18 +114,17 @@
     </div>
 
     <div class="project-content">
-      <a href="#" class="image-link">
+      <a href="ai-notifications.html" class="image-link">
         <div class="image-item">
           <img src="AI notifs cover image.png" alt="AI Notifications feature interface." loading="lazy">
         </div>
       </a>
       <div id="tagdiv">
-        <span class="context-tag">AI</span>
         <span class="context-tag">Notifications</span>
         <span class="context-tag">User Acquisition & Growth</span>
       </div>
       <h3>AI Notifications</h3>
-      <p>Leveraging notifications to convert anonymous users into registered users.</p>
+      <p>Converting anonymous users to registered memberswith notifications.</p>
     </div>
 
     <div class="project-content">
