Refine project description in work.html to clarify the process of converting anonymous users to registered members by leveraging notifications.

--- a/work.html
+++ b/work.html
@@ -124,7 +124,7 @@
         <span class="context-tag">User Acquisition & Growth</span>
       </div>
       <h3>AI Notifications</h3>
-      <p>Converting anonymous users to registered memberswith notifications.</p>
+      <p>Converting anonymous users to registered members by leveraging notifications.</p>
     </div>
 
     <div class="project-content">
