Update ai-notifications.html to refine the design process section, changing "Research & Discovery" to "Design & Discovery" and introducing a new highlight box that presents two UI approach options for front-loading actions versus subtlety in prioritizing scannability.

--- a/ai-notifications.html
+++ b/ai-notifications.html
@@ -257,10 +257,16 @@
 <br>
       <h2 id="process">Process: How We Got Here</h2>
       
-      <h3>Research & Discovery</h3>
+      <h3>Design & Discovery</h3>
       <p>
-        Given the broad challenge of rethinking information consumption for a modern publishing company, the team 
-        had no shortage of directions to consider.</p>
+        There were 2 ways we could approach this UI. This presented a single high-leverage design decision:</p>
+    <div class="highlight-box">
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">Starting Off With Two Approaches</h4>
+
+        <p style="font-size:21.8px;">Do we <span style="font-weight: bold;">front-load actions</span> or keep it <span style="font-weight: bold;">subtle</span>; prioritizing scannability?</p>
+
+
+        </div>
 
         <p class="lead-paragraph">
            But from the start, one goal united us: 
