Update ai-notifications.html and work.html to enhance titles and headers for clarity on notification system goals, improve business perspective language, and introduce a new UI conundrum section. Adjust body classes in multiple HTML files for consistent styling across article pages. Refine styles.css to support new layout requirements and improve responsiveness.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -12,7 +12,7 @@
   <!-- Preload critical images -->
 
 </head>
-<body>
+<body class="article-page">
   <!-- WebGL Canvas for particles -->
 <!-- <canvas id="particleCanvas"></canvas> -->
 
