--- a/work.html
+++ b/work.html
@@ -123,7 +123,9 @@
         <span class="context-tag">Notifications</span>
         <span class="context-tag">User Acquisition & Growth</span>
       </div>
-      <h3>AI Notifications</h3>
+      <h3>Notifications: Designing a notification system that balanced acquisition goals without degrading 
+        editorial integrity.
+      </h3>
       <p>Converting anonymous users to registered members by leveraging notifications.</p>
     </div>
 
