--- a/explore.html
+++ b/explore.html
@@ -12,7 +12,7 @@
   <!-- Preload critical images -->
 
 </head>
-<body>
+<body class="article-page">
   <!-- WebGL Canvas for particles -->
 <!-- <canvas id="particleCanvas"></canvas> -->
 
