--- a/work.html
+++ b/work.html
@@ -123,10 +123,10 @@
         <span class="context-tag">Notifications</span>
         <span class="context-tag">User Acquisition & Growth</span>
       </div>
-      <h3>Notifications: Designing a notification system that balanced acquisition goals without degrading 
-        editorial integrity.
+      <h3>Notifications
       </h3>
-      <p>Converting anonymous users to registered members by leveraging notifications.</p>
+      <p>Designing an AI-powered notification system that balanced acquisition goals without degrading 
+        editorial integrity.</p>
     </div>
 
     <div class="project-content">
