--- a/work.html
+++ b/work.html
@@ -125,7 +125,7 @@
       </div>
       <h3>Notifications
       </h3>
-      <p>Designing an AI-powered notification system that balanced acquisition goals without degrading 
+      <p>Designing an AI-powered notification system that balanced user acquisition goals, without degrading 
         editorial integrity.</p>
     </div>
 
