Update titles and descriptions in ai-notifications.html and work.html to enhance clarity on the notification system's focus on user acquisition goals while maintaining editorial integrity.

--- a/ai-notifications.html
+++ b/ai-notifications.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notifications: Designing A Notification Experience That Balanced Retention and Acquisition Goals Without Degrading 
+  <title>Notifications: Designing A Notification System That Balanced User Acquisition Goals Without Degrading 
     Editorial Integrity.</title>
   <link rel="icon" type="image/png" href="Notionme.png">
   <link rel="stylesheet" href="styles.css">
@@ -167,7 +167,7 @@
 
     <!-- Article Header -->
     <header class="article-header">
-      <h1>Designing A Notification System That Balanced Acquisition Goals Without Degrading 
+      <h1>Designing A Notification System That Balanced User Acquisition Goals Without Degrading 
         Editorial Integrity</h1>
       
       <!-- Feature Info Box -->
