Enhance clarity in ai-notifications.html by refining language to specify user flow and emphasize the goal of encouraging anonymous users to register. Update the business perspective description to highlight notifications as a lever for increasing pageviews and ad revenue opportunities.

--- a/ai-notifications.html
+++ b/ai-notifications.html
@@ -214,7 +214,8 @@
 </div>
 
     <br>
-        <p class="lead-paragraph">Within this flow, we wanted to <span style="font-weight: bold;">create high-conversion pathways for them to become registered members.</span></p>
+        <p class="lead-paragraph">Within this specific user flow, we wanted to <span style="font-weight: bold;">introduce high-conversion 
+            pathways that would encourage anonymous users to become registered members.</span></p>
       
 
 
@@ -261,7 +262,7 @@
       
       <h3>Design & Discovery</h3>
       <p class="lead-paragraph">
-        From a product perspective, we also wanted to use notifications as a mechanism to boost a user's pageviews/per session for ad revenue.         
+        From a product perspective, we also wanted notifications to be a lever that could boost a user's pageviews/per session for ad revenue opportunities.         
         </p>
       <p>
         This conundrum presented a design challenge.</p>
