Refine language in ai-notifications.html to clarify the role of notifications in boosting user engagement and ad revenue opportunities. Update success feedback animations in index.js for improved user experience during copy actions.

--- a/ai-notifications.html
+++ b/ai-notifications.html
@@ -262,7 +262,7 @@
       
       <h3>Design & Discovery</h3>
       <p class="lead-paragraph">
-        From a product perspective, we also wanted notifications to be a lever that could boost a user's pageviews/per session for ad revenue reasons.         
+        From a product perspective, we also wanted notifications to act as a lever that boosts a user's pageviews/per session to increase ad revenue opportunities.         
         </p>
       <p>
         This conundrum presented a design challenge.</p>
