Revise ai-notifications.html to update section titles and improve content structure, replacing "Process" and "Insights" with "Design & Discovery" and "How Might We Statement." Enhance clarity on project goals and user engagement strategies, while introducing new content on value propositions for anonymous users.

--- a/ai-notifications.html
+++ b/ai-notifications.html
@@ -150,8 +150,8 @@
         <a href="#introduction" class="toc-link">Introduction</a>
         <a href="#why" class="toc-link">Why?</a>
         <a href="#results" class="toc-link">Results & Impact</a>
-        <a href="#process" class="toc-link">Process</a>
-        <a href="#insights" class="toc-link">Insights</a>
+        <a href="#design-discovery" class="toc-link">Design & Discovery</a>
+        <a href="#hmw" class="toc-link">How Might We Statement</a>
         <a href="#solution" class="toc-link">Solution</a>
         <a href="#lessons" class="toc-link">Lessons Learned</a>
       </nav>
@@ -366,7 +366,6 @@
       <div class="code-blocks-grid">
        
       <div class="code-block">
-        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">Insight 1</h4>
           <h4 class="code-block-title">
             <span class="code-block-icon">  <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
               <path d="M8.80437 4.10156C6.7626 4.10156 5.10742 5.75674 5.10742 7.79851C5.10742 9.84027 6.7626 11.4955 8.80437 11.4955C10.8461 11.4955 12.5013 9.84027 12.5013 7.79851C12.5013 5.75674 10.8461 4.10156 8.80437 4.10156Z" fill="#947b57"/>
@@ -386,7 +385,6 @@
         </div>
 
         <div class="code-block">
-          <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">Insight 2</h4>
           <h4 class="code-block-title">
             <span class="code-block-icon"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
               <path opacity="0.4" d="M7.41016 2C7.05632 2 6.75061 2.24731 6.6767 2.59336L4.4267 13.1285C4.37942 13.3499 4.43468 13.5809 4.57707 13.7569C4.71947 13.9329 4.93376 14.0352 5.16016 14.0352H10.6842L10.0637 21.1852C10.0338 21.5302 10.244 21.8509 10.5724 21.9611C10.9008 22.0712 11.2619 21.9422 11.4461 21.6489L19.4749 8.86368C19.6201 8.63255 19.6282 8.34081 19.4962 8.10195C19.3641 7.86309 19.1127 7.71482 18.8398 7.71482L13.1876 7.71482L15.368 3.06863C15.477 2.83632 15.4597 2.5644 15.3221 2.3478C15.1845 2.1312 14.9457 2 14.6891 2H7.41016Z" fill="#947b57"/>
@@ -424,9 +422,6 @@
 <br>
 
 
-<p class="lead-paragraph">
-  From here, we created this HMW statement:
-</p>
 
  <div class="highlight-box">
         <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: -16px;">hmw statement</h4>
@@ -444,9 +439,6 @@
 
 <h3>Features</h3>
 
-<p>
-  The key features that emerged from our research insights and user needs.
-</p>
 
 <div class="feature-gallery">
   <div class="feature-card">
@@ -521,50 +513,11 @@ higher rate of Digests opened per user session MoM after its addition.
 
 
 
-  <div class="feature-card">
-    <div class="feature-content">
-      <p>
-      <h3 class="feature-headline">Low Friction Engagement: Next Read</h3>
-      <p class="feature-description">
-        Not a feature per se, but a core interaction design principle was inspired 
-        by the effortless swipe behavior seen in TikToks, Shorts, et al. 
-        While the constraint was the media type, not the platform, we still aimed to 
-        recreate that same sense of flow and lightness.</p>
 
-        <p></p>
 
-        <p class="feature-description">Instead of traditional page-to-page loads, users could scroll within a Digest panel, 
-          click “Next Read,” and instantly transition to the next story within that topic. We leveraged a scroll-to-top interaction to achieve this;
-          interpolating swipeable, snackable behavior into a fast, text-based, web-native experience.</p>
-    </div>
-    <div class="feature-image image-item">
-      <div class="gif-container interactive-gif">
-        <div class="gif-loader"></div>
-        <img src="Next Read.gif" 
-             alt="Next Read Interaction" 
-             loading="eager" 
-             class="gif-loading gif-interactive"
-             data-gif-src="Next Read.gif"
-             data-static-src="Next Read Preview.png">
-        <div class="gif-play-indicator">
-          <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="12" cy="12" r="10" fill="rgba(255,255,255,0.9)"/>
-            <path d="M10 8l6 4-6 4V8z" fill="black"/>
-          </svg>
-        </div>
-        <p class="gif-annotation">
-          <span class="desktop-text">Hover to play <I>(Focus on the Next Read Interaction)</I> </span>
-          <span class="mobile-text">Click to play</span>
-        </p>
-      </div>
-    </div>
-  </div>
 
-</div>
 
-<br>
 
-<div></div>
 
 <h2 id="lessons">Lessons Learned: Why This Experience Mattered</h2>
       
