Update ai-notifications.html to add a new "Easter Eggs" section in the table of contents, revise section titles for clarity, and enhance content structure. Modify the "Bertie Sidekick" references in explore.html to focus on the new notification system, ensuring alignment with user acquisition goals while maintaining editorial integrity. Update .DS_Store file.

--- a/explore.html
+++ b/explore.html
@@ -641,20 +641,22 @@ higher rate of Digests opened per user session MoM after its addition.
   <!-- Content Divider -->
   <div class="content-divider" style="width: 80vw; margin-left: auto; margin-right: auto;">Next Up</div>
 
-  <!-- Bertie Sidekick Recirculation -->
+  <!-- AI Notifications Recirculation -->
   <div class="recirc-card" style="margin: 48px auto 64px auto; max-width: 800px; background: #fff; border: 1px solid #e9ecef; border-radius: 16px; padding: 32px; display: flex; align-items: center; gap: 32px;">
     <div style="flex: 1;">
-      <h3 style="margin: 0 0 16px 0; font-size: 24px; font-weight: 600; color: #333;">Bertie: SEO Sidekick & Assistant</h3>
-      <p style="margin: 0 0 24px 0; color: #666; line-height: 1.6;">Every superhero needs a sidekick; making SEO auditing more engaging and informative for Forbes' journalists.</p>
-      <a href="bertie-sidekick.html" class="password-submit" style="text-decoration: none; width: fit-content;">
+      <h3 style="margin: 0 0 16px 0; font-size: 24px; font-weight: 600; color: #333;">Notifications</h3>
+      <p style="margin: 0 0 24px 0; color: #666; line-height: 1.6;">Designing a notification system that balanced user acquisition goals without degrading editorial integrity.
+
+      </p>
+      <a href="ai-notifications.html" class="password-submit" style="text-decoration: none; width: fit-content;">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
-        View Case Study
+        View Case Study              
       </a>
     </div>
     <div style="flex: 0 0 300px;">
-      <img src="Bertie Publish.png" alt="Bertie SEO Assistant interface" loading="lazy" style="width: 100%; height: auto; border-radius: 12px;">
+      <img src="AI notifs cover image.png" alt="AI Notifications feature interface" loading="lazy" style="width: 100%; height: auto; border-radius: 12px;">
     </div>
   </div>
 
