Correct typos in ai-notifications.html to improve readability and clarity, specifically addressing the phrases "that cared about" and "Unforutnately".

--- a/ai-notifications.html
+++ b/ai-notifications.html
@@ -402,7 +402,7 @@
                 
            Personal Relevance / Identity
           </h4>
-          <p>We also shaped personalization to be a key selling point; letting readers know, we respect their attention and only wanted to notify them about topics that cared about.</p>
+          <p>We also shaped personalization to be a key selling point; letting readers know, we respect their attention and only wanted to notify them about topics that they cared about.</p>
 
       </div>
       </div>
@@ -454,7 +454,7 @@
         their utilization of their freemium account; this was the impetus for the upsell module.</p> 
         <br>
         <p class="feature-description"> I pitched this module to the team and it got immediate buy-in. 
-        Unforutnately, with the way we track user activity, this module was not able to be implemented.
+        Unfortnately, with the way we track user activity, this module was not able to be implemented.
         </p>
     </div>
     <div class="feature-image image-item">
