Refine language and improve clarity in ai-notifications.html, correcting typos and enhancing descriptions of user engagement strategies. Notable changes include adjustments to phrases regarding user interest and the upsell module, as well as a more comprehensive reflection on the project experience.

--- a/ai-notifications.html
+++ b/ai-notifications.html
@@ -402,7 +402,7 @@
                 
            Personal Relevance / Identity
           </h4>
-          <p>We also shaped personalization to be a key selling point; letting readers know, we respect their attention and only wanted to notify them about topics that they cared about.</p>
+          <p>We also shaped personalization to be a key selling point; letting readers know, we respect their attention and only wanted to notify them about topics they cared about.</p>
 
       </div>
       </div>
@@ -451,10 +451,10 @@
       <h3 class="feature-headline">So An Anonymous User Has Created A Free Account, Now What?</h3>
       <p class="feature-description">
        As a serial free trial user, I was all too aware of the nudge effect similar upgrade modules had on users, especially when they can see 
-        their utilization of their freemium account; this was the impetus for the upsell module.</p> 
+        their utilization of their freemium account; this was the impetus for the ugrade module.</p> 
         <br>
         <p class="feature-description"> I pitched this module to the team and it got immediate buy-in. 
-        Unfortnately, with the way we track user activity, this module was not able to be implemented.
+        Unfortunately, with the way we track user activity, this module was not able to be implemented as intended.
         </p>
     </div>
     <div class="feature-image image-item">
@@ -492,9 +492,14 @@
       </div>
 
       <p class="lead-paragraph">
-       This was an interesting project to see through. It's always fascisinating to see how introducing
-       something so simple like an account wall behind a utility feature can have a significant impact on users willingness to create an account.
-      </p>
+    
+       This was an enthralling experience; liaising with editorial and product counterparts to find the right balance between user acquisition and editorial integrity.
+       The project reinforced the idea of knowing what kind of product you own, and how best to represent that through your product's design; a valuable lesson I will carry with me in future projects.
+     <br>
+     <br>
+     Ultimately, this was an interesting project to see through. It's always fascinating to see how introducing
+     something so simple like an account wall behind a utility feature can have a significant impact on users' willingness to create an account.
+    </p>
 
     </article>
   </main>
