Update project tab label in work.html for improved clarity, changing "Consumer" to "Consumer Experiences".

--- a/work.html
+++ b/work.html
@@ -78,7 +78,7 @@
       <div class="project-tabs">
         <button class="project-tab active" data-filter="all">All <span class="tab-count">(4)</span></button>
         <button class="project-tab" data-filter="internal">Internal Tools</button>
-        <button class="project-tab" data-filter="consumer">Consumer</button>
+        <button class="project-tab" data-filter="consumer">Consumer Experiences</button>
       </div>
       <div class="project-grid">
     <div class="project-content" data-category="internal">
