Update context tags in work.html to reflect new focus areas: "Workflow Design" and "Logic Building UI".

--- a/work.html
+++ b/work.html
@@ -88,8 +88,8 @@
         </div>
       </a>
       <div id="tagdiv">
-        <span class="context-tag">Search</span>
-        <span class="context-tag">Custom Lists</span>
+        <span class="context-tag">Workflow Design</span>
+        <span class="context-tag">Logic Building UI</span>
       </div>
       <h3>FUEL: Advanced Search & Custom List Creation</h3>
       <p>From Engineering reliance to self-serve: Designing a Structured Query Builder for Editorial Teams to create custom Forbes Lists.</p>
