Update advanced-search.html to enhance clarity on the impact of the structured query builder, emphasizing its role in reducing dependency on engineers and enabling self-service for list editors. Also, update .DS_Store file.

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -476,8 +476,10 @@ This meant we had to provide a robust list of criterias/conditions to choose fro
       </div>
 
       <p class="lead-paragraph"> This project reinforced how deeply workflow design shapes organization
-        velocity. Editorial iteration speed was constrained by engineering bandwith. By introducing 
-        this structured query builder, Advanced Search, List editors can see a future without dependcncy on engineers. Other than that, this project as part of the large FUEL initiative, has thought me how to work on projects that are engineering led and how to
+        velocity. Editorial iteration speed was constrained by engineering bandwith and by introducing 
+        this structured query builder in Advanced Search, List editors can see a future without dependency on engineers. This will also allow them to generate highly targeted lists through a self-serve query system.  
+        <br><br>
+        Other than that, this project as part of the larger FUEL initiative, has thought me how to work on projects that are engineering led and how to
          lead with inquiry before jumping to solutions.
      <br><br>
         The product has not yet fully launched, so measurable outcomes are still forthcoming. However, the north star was clear:
