Enhance text clarity in work.html by refining project descriptions for better readability. Update styles.css to set font size for project content paragraphs, improving overall text presentation.

--- a/work.html
+++ b/work.html
@@ -91,7 +91,7 @@
         <span class="context-tag">Logic Building UI</span>
       </div>
       <h3>FUEL: Advanced Search & Custom List Creation</h3>
-      <p>From Engineering reliance to self-serve: Designing a Structured Query Builder for Editorial Teams to create custom Forbes Lists.</p>
+      <p>From engineering reliance to self-serve: creating a structured query builder for editorial teams to create custom Forbes Lists.</p>
     </div>
 
     <div class="project-content" data-category="consumer">
@@ -128,7 +128,7 @@
           <span class="context-tag">Consumer AI</span>
         </div>
       <h3>Forbes: Explore</h3>
-      <p>Rethinking news & information consumption habits amidst the proliferation of AI.</p>
+      <p>Rethinking news and information consumption patterns amidst the proliferation of Generative AI.</p>
     </div>
 
     <div class="project-content" data-category="consumer">
