Refine content in advanced-search.html for improved clarity and readability. Updated phrasing to enhance understanding of user-friendly database interactions and corrected grammatical errors for better flow.

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -254,7 +254,7 @@
         <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">Product Opportunity</h4>
 
         <p style="font-size:21.8px;">As list editors had no technical background in querying a database, we saw a product opportunity to create 
-            user-friendly ways for list editors to interface with the database that would allow them to create custom list data.</p>
+            user-friendly ways for list editors to interface with the database to retrieve custom list data.</p>
 
 
         </div>
@@ -480,7 +480,7 @@ This meant we had to provide a robust list of criterias/conditions to choose fro
         velocity. Editorial iteration speed was constrained by engineering bandwith and by introducing 
         this structured query builder in Advanced Search, List editors can see a future without dependency on engineers. This will also allow them to generate highly targeted lists through a self-serve query system.  
         <br><br>
-        Other than that, this project as part of the larger FUEL initiative, has thought me how to work on projects that are engineering led and how to
+        Other than that, this project as part of the larger FUEL initiative, taught me how to work on projects that are engineering led and how to
          lead with inquiry before jumping to solutions.
      <br><br>
         The product has not yet fully launched, so measurable outcomes are still forthcoming. However, the north star was clear:
